Added CSS styles

--- a/suchana-ui/src/app/app.component.html
+++ b/suchana-ui/src/app/app.component.html
@@ -9,7 +9,8 @@
 
 <div class="container">
   <!--<div class="row">-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-white">
+    <nav class="navbar navbar-dark" style="background-color: black;">
     <a class="navbar-brand" href="#">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,11 +27,23 @@
           <a class="nav-link" routerLink="/politics" routerLinkActive="active">Politics</a>
         </li>
         <li class="nav-item ml-5">
-          <a class="nav-link" href="#">Entertainment</a>
+          <a class="nav-link" routerLink="/entertainment" routerLinkActive="active">Entertainment</a>
+        </li>
+        <li class="nav-item ml-5">
+          <a class="nav-link" routerLink="/AboutUS" routerLinkActive="active">About Us</a>
+        </li>
+        <li class="nav-item ml-5">
+          <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
         </li>
       </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
+  </nav>
   </nav>
   <!--</div>-->
 </div>
+
 <router-outlet></router-outlet>
