--- a/suchana-ui/src/app/components/sports/sports.component.html
+++ b/suchana-ui/src/app/components/sports/sports.component.html
@@ -1,1 +1,10 @@
-<p>sports works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12" *ngFor="let sports of sportsNews">
+      <h3>{{sports.title}}</h3>
+      <p>By {{sports.author.firstName}} {{sports.author.lastName}} | {{sports.category.name}}</p>
+      <p>{{sports.content}}</p>
+    </div>
+  </div>
+</div>
+
