--- a/suchana-ui/src/app/app.component.css
+++ b/suchana-ui/src/app/app.component.css
@@ -1,2 +1,10 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
-
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
