--- a/suchana-ui/src/app/app.component.html
+++ b/suchana-ui/src/app/app.component.html
@@ -4,7 +4,7 @@
   </h1>
 </div>
 
-<app-header *ngIf="!isLoggedIn"></app-header>
+<app-header *ngIf="isLoggedIn"></app-header>
 <router-outlet></router-outlet>
 
 <footer class="footer">
