--- a/suchana-ui/src/app/components/admin/admin.component.html
+++ b/suchana-ui/src/app/components/admin/admin.component.html
@@ -11,7 +11,10 @@
       <ul class="navbar-nav">
         <li class="nav-item ml-5">
           <a class="nav-link" routerLink="/admin/categories" routerLinkActive="active">Categories</a>
-          <a class="nav-link" routerLink="/admin/authors" routerLinkActive="active">Authors</a>
+
+        </li>
+        <li class ="nav-item ml-5">
+        <a class="nav-link" routerLink="/admin/authors" routerLinkActive="active">Authors</a>
         </li>
       </ul>
     </div>
