--- a/suchana-ui/src/app/components/politics/politics.component.html
+++ b/suchana-ui/src/app/components/politics/politics.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12" *ngFor="let politics of politicsNew">
       <h3>{{politics.title}}</h3>
-      <p>By {{politics.author.firstName}} {{politics.author.lastName}} | {{politics.category.name}}</p>
+      <p>By {{politics.user.firstName}} {{politics.user.lastName}} | {{politics.category.name}}</p>
       <p>{{politics.content}}</p>
     </div>
   </div>
