--- a/suchana-ui/src/app/components/entertainment/entertainment.component.html
+++ b/suchana-ui/src/app/components/entertainment/entertainment.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12" *ngFor="let entertainment of entertainmentNews">
       <h3>{{entertainment.title}}</h3>
-      <p>By {{entertainment.author.firstName}} {{entertainment.author.lastName}} | {{entertainment.category.name}}</p>
+      <p>By {{entertainment.user.firstName}} {{entertainment.user.lastName}} | {{entertainment.category.name}}</p>
       <p>{{entertainment.content}}</p>
     </div>
   </div>
