--- a/suchana-ui/src/app/components/sports/sports.component.html
+++ b/suchana-ui/src/app/components/sports/sports.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12" *ngFor="let sports of sportsNews">
       <h3>{{sports.title}}</h3>
-      <p>By {{sports.author.firstName}} {{sports.author.lastName}} | {{sports.category.name}}</p>
+      <p>By {{sports.user.firstName}} {{sports.user.lastName}} | {{sports.category.name}}</p>
       <p>{{sports.content}}</p>
     </div>
   </div>
